fix: combobox search input icon not centered (#1091)

--- a/src/components/dls/Forms/Combobox/Icons/SearchInputIcon.module.scss
+++ b/src/components/dls/Forms/Combobox/Icons/SearchInputIcon.module.scss
@@ -11,7 +11,8 @@
 }
 
 .icon svg {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   width: var(--spacing-small);
   height: var(--spacing-small);
   overflow: hidden;
